# RISC-solver-rust

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.api  KOYEB.md  KOYEB_CONFIG.md  OPTIMIZATIONS.md  README.md  RUN.md  SUBMISSION.md  benchmark.sh  benchmark_results.json  input.json  keep-alive.sh  test_correctness.sh
src/: api.rs  api_main.rs  lib.rs  main.rs
