[package]
name = "matmul-solver"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "matmul-solver"
path = "src/main.rs"

[[bin]]
name = "matmul-api"
path = "src/api_main.rs"
required-features = ["api"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
half = "2.3"
blake3 = "1.5"
clap = { version = "4.5", features = ["derive"] }
cblas-sys = { version = "0.1", optional = true }
openblas-src = { version = "0.10", features = ["cblas"], optional = true }
axum = { version = "0.7", optional = true }
tokio = { version = "1.0", features = ["full"], optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["cors"], optional = true }

[features]
default = ["openblas"]
openblas = ["cblas-sys", "openblas-src"]
api = ["axum", "tokio", "tower", "tower-http"]
